force-app/main/default/objects/Weight_Loss_S__c/fields/B12_given__c.field-meta.xml
<CustomField>
    <fullName>B12_given__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B12 given</label>
    <type>Checkbox</type>
</CustomField>