force-app/main/default/objects/Weight_Loss_S__c/fields/Medicine__c.field-meta.xml
<CustomField>
    <fullName>Medicine__c</fullName>
    <label>Medicine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Semeglutide</fullName>
            </value>
            <value>
                <fullName>Trizepatide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>